update about and style

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,10 +20,13 @@
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li>
-                  <a href="{{ '/about/' | prepend: site.baseurl }}">About</a>
+                  <a href="{{ '/tags/' | prepend: site.baseurl }}">Topic</a>
                 </li>
                 <li>
-                  <a href="{{ '/tags/' | prepend: site.baseurl }}">Tags</a>
+                    <a href="{{ '/about/' | prepend: site.baseurl }}">About</a>
+                </li>
+                <li>
+                    <a href="{{ '/archive/' | prepend: site.baseurl }}">Archive</a>
                 </li>
                 <li>
                   <a href="#"><i class="fa fa-search"></i></a>
