update backgroud pic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <span class="tooltip-text">
             <span class="tooltip-inner">扫这里，关注七姑娘微信
               <br>
-              <img src="{{site.baseurl }}/img/July-Wechat.jpg">
+              <img src="{{site.baseurl }}/img/about/July-Wechat.jpg">
             </span>
           </span>
         </span>
