update haeder pic and sumbmit reading English

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <header class="intro-header" >
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 col-lg-offset-3 col-md-8 col-md-offset-2">
+            <div class="col-md-8 col-md-offset-2">
                 <div class="post-heading">
                     <div class="Tags">
                         {% for tag in page.tags %}
@@ -37,7 +37,7 @@ layout: default
 <article>
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 col-lg-offset-3 col-md-8 col-md-offset-2 post-container">
+            <div class="col-md-8 col-md-offset-2 post-container">
 
                 {{ content }}
 
