--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -228,7 +228,7 @@ hr.small {
 
 .intro-header {
     background: no-repeat center center;
-    background-color: #9d749d; //#808080;
+    background-color: #080808;//#9d749d; //#808080;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
