remove utility buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     </div> -->
     <div class="utilitytools">
       <a  id="back-top" class="" title="回到顶部"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
-      <a class="qrcode" href="javascript:void(0)" title="关注我">
+      <!-- <a class="qrcode" href="javascript:void(0)" title="关注我">
         <i class="fa fa-qrcode" aria-hidden="true"></i>
         <span class="tooltip-content">
           <span class="tooltip-text">
@@ -40,7 +40,7 @@
       </a>
       <a class="mail" href="mailto:julyfly321520@163.com" title="联系我">
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-      </a>
+      </a> -->
     </div>
 
 </body>
