--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,12 @@
         ga('create', 'UA-80884545-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <!-- <div id="back-top">
-        <a href="#top" title="回到顶部">
-            <div class="rope"></div>
-            <div class="baby"></div>
-        </a>
-    </div> -->
+    <!--<div id="back-top">-->
+        <!--<a href="#top" title="回到顶部">-->
+            <!--<div class="rope"></div>-->
+            <!--<div class="baby"></div>-->
+        <!--</a>-->
+    <!--</div>-->
     <div class="utilitytools">
       <a  id="back-top" class="" title="回到顶部"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
       <!-- <a class="qrcode" href="javascript:void(0)" title="关注我">
@@ -42,7 +42,6 @@
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
       </a> -->
     </div>
-
 </body>
 
 </html>
