--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -805,9 +805,10 @@ a img {
       margin-top: 8px;
     }
     .datetime {
-      width: 60px;
+      width: 65px;
       display: inline-block;
-      font-size: 17px;
+      font-size: 15px;
+      //color: #808080;
     }
     >a {
       font-size: 16px;
