--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
                   <ul class="sublist">
                     {% for tag in site.tags %}
                         <li class="dropdown">
-                            <a href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}"><i class="fa fa-chevron-left" aria-hidden="true"></i>{{ tag[0] }}</a>
+                            <a href="/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}"><i class="fa fa-chevron-left" aria-hidden="true"></i>{{ tag[0] }}</a>
                             <ul class="subsublist">
                                 {% for post in tag[1] %}
                                 <li class="listing-item">
