update search styles

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,8 +1,11 @@
 <!-- HTML elements for search -->
 <div class="search">
   <div id="search-container" class="search-inner">
-    <input type="text" id="search-input" class="search-input" placeholder="search...">
-    <span class="search-info">Enter keywords to search or click out of search pane to close</span>
+    <div class="input-group">
+      <input type="text" id="search-input" class="search-input" placeholder="你想找什么...">
+      <svg  id="close-search" aria-hidden="true" width="24" height="22px" viewBox="0 0 24 22"><path d="M11 9.586L20.192.393l1.415 1.415L12.414 11l9.193 9.192-1.415 1.415L11 12.414l-9.192 9.193-1.415-1.415L9.586 11 .393 1.808 1.808.393 11 9.586z"></path></svg>
+    </div>
+    <!-- <span class="search-info">Enter keywords to search or click out of search pane to close</span> -->
     <ul id="results-container"></ul>
   </div>
 </div>
