--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -1092,21 +1092,23 @@ a img {
     right: 0;
     //right: calc(8em + 1px);
     overflow: hidden;
-    width: calc(30em - 1px);
+    width: 100%;
     height:  100%; //100vh;
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: #ffffff;
-      transform: scale3d(0, 1, 1);
-      transform-origin: 0% 50%;
-      transition: transform 0.3s;
-      transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-    }
+    display: flex;
+    justify-content: center;
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   background: #ffffff;
+    //   transform: scale3d(0, 1, 1);
+    //   transform-origin: 0% 50%;
+    //   transition: transform 0.3s;
+    //   transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    // }
   &.search--open {
     pointer-events: auto;
     z-index: 1000;
@@ -1124,6 +1126,19 @@ a img {
     padding: 2.5em 1.5em 0;
     transform: translate3d(-100%, 0, 0);
     transition: transform 0.3s;
+    width: 70%;
+    @media only screen and (max-width: 768px) {
+      width: 100%;
+    }
+    .input-group {
+      display: flex;
+      align-items: flex-end;
+      > svg {
+        fill: #fff;
+        cursor: pointer;
+        margin-left: 20px;
+      }
+    }
   }
   .search-input {
     border: 0;
@@ -1137,9 +1152,12 @@ a img {
     box-sizing: border-box;
     width: 100%;
     padding: 0.15em 0;
-    color: #000;
+    color: #fff;
     border-bottom: 2px solid;
     outline: none;
+    @media only screen and (max-width: 768px) {
+      font-size: 1.5em;
+    }
   }
   .search-info {
     font-size: 85%;
@@ -1156,6 +1174,9 @@ a img {
     >li {
       font-size: 16px;
       margin: 5px 0;
+      a {
+        color: #fff;
+      }
     }
 
     .fa-link {
@@ -1169,7 +1190,7 @@ a img {
   top: 0;
   height: 100%;
   width: 100%;
-  background: rgba(171, 171, 171, 0.5);
+  background: rgba(0, 0, 0, 0.65);
   z-index: 900;
   display: none;
 }
